<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".loginrigestration.LoginActivity">

        <include
            layout="@layout/app_bar_layout"
            android:id="@+id/main_page_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:id="@+id/img_logo"
                    android:layout_gravity="center"
                    android:src="@drawable/whatslogo"
                    android:layout_marginTop="@dimen/_100sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/email"
                        android:id="@+id/et_login_email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:passwordToggleEnabled="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/password"


                        android:id="@+id/et_login_password" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:id="@+id/tv_forgetPassword"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/bt_login"
                    android:layout_gravity="center"
                    app:cornerRadius="@dimen/_5sdp"
                    android:textColor="@color/white"
                    android:textAllCaps="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_new_acount"
                    android:id="@+id/tv_new_account"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold
"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or_login_using_your"
                    android:id="@+id/tv_login_phone"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"

                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/_180sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:id="@+id/bt_login_phone"
                    android:layout_gravity="center"
                    app:cornerRadius="@dimen/_5sdp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/phone" />


            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>